# memphis-v5

./: .env  .env.example  .eslintignore  .gitignore  .importsortrc.json  .prettierignore  ADR-001-architecture-choice.md  ADR-002-storage-state-choice.md  ARCHITECTURE-REVIEW-REPORT.md  ARCHITECTURE_V0.md  BETA-TESTING-CHECKLIST.md  CHANGELOG.md  CHANGELOG_BLUEPRINT_PORT.md  CHANGELOG_SPRINT2.md  CHANGELOG_SPRINT3.md  CHANGELOG_SPRINT4.md  CHANGELOG_v0.1.1.md  CODE-QUALITY-REPORT.md  CODE-REVIEW-REPORT-2026-03-11.md  CONFIG_STRATEGY_V0.md  CONTEXT_RESET_HANDOFF_v1.8.md  CONTRIBUTING.md  Cargo.toml  DEPENDENCY-AUDIT-REPORT.md  Dockerfile  EXECUTION-30x30.md  IMPLEMENTATION_PROGRESS.md  INSTALL.md  INTERFACES_CONTRACT_V0.md  ITERATION_PLAN_V1.md  LICENSE  LOCAL-BIG-PACK-QUEUE.md  LOGGING_ERROR_POLICY_V0.md  MEMPHIS-V4-CODELINE-BLUEPRINT.md  NPM-INSTALL.md  PERFORMANCE-ANALYSIS-REPORT.md  PHASE-08-DELIVERY-TRACKER.md  PRECODING_CHECKLIST_V4.md  PRIMARY_SOURCES.md  PROJECT_CHARTER_V4.md  (+30 more)
benchmarks/: performance-suite.ts  run.ts
crates/memphis-napi/: Cargo.toml  index.js
crates/memphis-napi/src/: lib.rs  vault_bridge.rs
crates/memphis-vault/: Cargo.toml
crates/memphis-vault/src/: did.rs  error.rs  lib.rs  types.rs  vault.rs
crates/memphis-vault/tests/: vault_embed_chain_integration_test.rs
data/: decision-audit.jsonl  decision-history.jsonl  retrieval-benchmark-baseline.json  retrieval-benchmark-corpus-v2.json  retrieval-benchmark-corpus-v3.json  retrieval-benchmark-history.json
demo/: index.html
docs/: ALERT-SEVERITY-THROTTLE-POLICY.md  API-REFERENCE.md  (+111 more)
(+625 files in other folders)
