[package]
name = "memphis-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
memphis-core = { path = "../memphis-core" }
memphis-vault = { path = "../memphis-vault" }
memphis-embed = { path = "../memphis-embed" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
napi = { version = "3", features = ["napi9", "serde-json"] }
napi-derive = "3"
