[package]
name = "memphis-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
serde.workspace = true
thiserror.workspace = true
chrono.workspace = true
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = "1"
sha2 = "0.10"
hex = "0.4"
ed25519-dalek = "2.1"
base64-url = "2"
bs58 = "0.5"

[dev-dependencies]
serde_json.workspace = true
chrono.workspace = true
memphis-embed = { path = "../memphis-embed" }
memphis-core = { path = "../memphis-core" }
